# FMGoalMusic

./: .gitignore  AMBIANCE_SETUP.md  ARCHITECTURE.md  BUILD-FILES.md  BUILD.md  COMMUNITY_DESCRIPTION.md  COMPLETE-WINDOWS-INSTALLER.ps1  COMPLETE-WINDOWS-INSTALLER_1.ps1  COMPLETE-WINDOWS-INSTALLER_2.ps1  COMPLETE-WINDOWS-INSTALLER_7.ps1  Cargo.toml  INSTALL-WINDOWS.bat  INSTALL-WINDOWS.ps1  INSTALLER-README.md  LICENSE.txt  README.md  REFACTORING.md  build.rs  build.sh  build_app.sh  build_for_windows.ps1  build_installer.bat  build_macos.sh  build_macos_enhanced.sh  build_windows.bat  build_windows_installer.bat  clippy.toml  create_windows_package.sh  download_tesseract.sh  installer.iss  installer.nsi  license.txt
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/_cfg/ides/: claude-code.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  only-publish-release.yml  release.yml  test-release.yml
Doc/: BUGS.md  Backlog_OLD.md  CURRENT_SPRINT.md  Design.md  FEATURES.md  IDEAS.md  Implementation.md  Plan.md  REFACTORING_SUMMARY.md  ROADMAP.md  UI_REDESIGN_PLAN.md  UserGuide.md
Doc/Features/: AmbianceSounds.md  AudioConversion.md  GUIVersion.md  TeamSelection.md
assets/: README.md  icon.icns
assets/i18n/: de.json  en.json  es.json  fr.json  it.json  pt.json  tr.json
assets/tesseract/: README.md
assets/wizard/: steps.json
build_scripts/: FMGoalMusicInstaller.nsi  FMGoalMusicInstaller_Mhsnd.nsi  build_for_macos.sh  build_for_windows.ps1  check_windows_runner.ps1
config/: teams.json
docs/: InitializePrompt.md  folder-structure.md  plan.md  step-b-summary.md  testing-guide.md
openspec/: project.md
openspec/changes/add-random-goal-playlist/: design.md  proposal.md  tasks.md
openspec/changes/add-random-goal-playlist/specs/gui/: spec.md
openspec/changes/refactor-gui-to-gpui/: design.md  proposal.md  tasks.md
openspec/changes/refactor-gui-to-gpui/specs/gui/: spec.md
openspec/changes/update-gui-dashboard-redesign/: design.md  proposal.md  tasks.md
openspec/changes/update-gui-dashboard-redesign/specs/gui/: spec.md
src/: audio.rs  audio_converter.rs  capture.rs  config.rs  error.rs  gui.rs  gui_main.rs  gui_main_simple.rs  main.rs  ocr.rs  region_selector.rs  slug.rs  team_matcher.rs  teams.rs  update_checker.rs  utils.rs
src/audio_system/: manager.rs  mod.rs  player.rs  source.rs
src/audio_system/effects/: fade.rs  limiter.rs  mod.rs  volume.rs
src/detection/: detector.rs  goal_detector.rs  i18n.rs  i18n_loader.rs  kickoff_detector.rs  match_end_detector.rs  mod.rs  pipeline.rs
src/gui/: actions.rs  controller.rs  global_hotkeys.rs  hotkeys.rs  messages.rs  mod.rs  model.rs  state.rs  theme.rs  update.rs  view.rs
src/gui/views/: help.rs  library.rs  mod.rs  settings.rs  team.rs
src/legacy_gui/: messages.rs  mod.rs  model.rs  state.rs  theme.rs  update.rs
src/legacy_gui/views/: help.rs  library.rs  mod.rs  settings.rs  team.rs
src/messaging/: bus.rs  commands.rs  events.rs  executor.rs  mod.rs
src/ocr/: detection.rs  mod.rs  preprocessing.rs  text_extraction.rs
src/state/: app_state.rs  mod.rs  process_state.rs
src/wizard/: flow.rs  mod.rs  persistence.rs  state.rs  steps.rs
tests/: integration_test.rs
