[package]
name = "fm-goal-musics"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fm-goal-musics-gui"
path = "src/gui_main.rs"

[dependencies]
# Screen capture - GPU-assisted (cross-platform)
xcap = "0.7"

# OCR - Tesseract wrapper
leptess = "0.14.0"

# Audio playback with MP3 support
rodio = { version = "0.19", features = ["mp3"] }

# Audio format conversion
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "isomp4", "ogg"] }
hound = "3" 
unicode-normalization = "0.1"
# WAV file encoding

# Configuration serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Display information (screen resolution)
display-info = "0.4"

# Image processing
image = "0.25"

# Platform directories
dirs = "5.0"

# GUI dependencies
eframe = "0.33.0"
egui = "0.33.0"
rfd = "0.14"  # Native file dialogs

# Hotkey listener
rdev = "0.5"

# Logging for production debugging
log = "0.4"
env_logger = "0.11"

# Application packaging
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization, slower compile
strip = true            # Strip symbols for smaller binary
panic = "abort"         # Abort on panic for smaller binary
overflow-checks = false # Disable overflow checks in release

[profile.release.package."*"]
opt-level = 3           # Optimize dependencies too
