[package]
name = "fm-goal-musics"
version = "0.2.3"
edition = "2021"

[[bin]]
name = "fm-goal-musics-gui"
path = "src/gui_main.rs"

[dependencies]
# Screen capture - GPU-assisted (cross-platform)
xcap = "0.7"

# OCR - Tesseract wrapper
leptess = "0.14.0"

# Audio playback with MP3 support
rodio = { version = "0.19", features = ["mp3"] }

# Audio format conversion
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "isomp4", "ogg"] }
hound = "3" 
unicode-normalization = "0.1"
# WAV file encoding

# Configuration serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Display information (screen resolution)
display-info = "0.4"

# Image processing (only enable needed formats for faster compile + smaller binary)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Parallel processing for performance-critical code
rayon = "1.10"

# Platform directories
dirs = "5.0"

# GUI dependencies
eframe = "0.33.0"
egui = "0.33.0"
rfd = "0.14"  # Native file dialogs

# Update checker
ureq = { version = "2.10", features = ["json"] }  # HTTP client for update checking
semver = "1.0"  # Semantic version parsing and comparison
open = "5.0"  # Open URLs in default browser

# Hotkey listener
rdev = "0.5"

# Logging for production debugging
log = "0.4"
flexi_logger = "0.28"  # File logging with rotation
sysinfo = "0.30"

# Application packaging
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization, slower compile
strip = true            # Strip symbols for smaller binary
panic = "abort"         # Abort on panic for smaller binary
overflow-checks = false # Disable overflow checks in release

[profile.release.package."*"]
opt-level = 3           # Optimize dependencies too



[build-dependencies]
winres = "0.1"


