[package]
name = "fm-goal-musics"
version = "0.2.4"
edition = "2021"

[[bin]]
name = "fm-goal-musics-gui"
path = "src/gui_main.rs"

[dependencies]
# Screen capture - GPU-assisted (cross-platform)
xcap = "0.7"

# OCR - Tesseract wrapper
leptess = "0.14.0"

# Audio playback with MP3 support
rodio = { version = "0.19", features = ["mp3"] }

# Audio format conversion
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "isomp4", "ogg"] }
hound = "3" 
unicode-normalization = "0.1"
# WAV file encoding

# Configuration serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Display information (screen resolution)
display-info = "0.4"
raw-window-handle = "0.6"

# Image processing (only enable needed formats for faster compile + smaller binary)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Parallel processing for performance-critical code
rayon = "1.10"

# Regular expressions for text parsing
regex = "1.10"

# Platform directories
dirs = "5.0"

# GUI dependencies
gpui = "0.2.2"
gpui-component = { git = "https://github.com/longbridge/gpui-component", branch = "main", features = ["webview"] }
wry = { package = "lb-wry", version = "0.53.3" }
rfd = "0.14"  # Native file dialogs

# Update checker
ureq = { version = "2.10", features = ["json"] }  # HTTP client for update checking
semver = "1.0"  # Semantic version parsing and comparison
open = "5.0"  # Open URLs in default browser

# Hotkey listener
rdev = "0.5"

# Error handling
anyhow = "1.0"      # Application errors with context
thiserror = "1.0"   # Library errors with derives

# Logging for production debugging
tracing = "0.1"     # Structured logging with spans
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"  # File appender with daily rotation
sysinfo = "0.30"

# Concurrency primitives (better than std)
crossbeam-channel = "0.5"  # Better channels than std::mpsc
parking_lot = "0.12"       # Faster locks than std::sync

# Application packaging
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[profile.release]
opt-level = 3           # Maximum optimization
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization, slower compile
strip = true            # Strip symbols for smaller binary
panic = "abort"         # Abort on panic for smaller binary
overflow-checks = false # Disable overflow checks in release

[profile.release.package."*"]
opt-level = 3           # Optimize dependencies too



[build-dependencies]
winres = "0.1"
resvg = "0.43"
walkdir = "2.5"
